added job respond tests(not working yet) and cookies saving between tests in auth

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,6 +1,8 @@
-loginpage = https://spb.superjob.ru/
-firefoxdriver = C:/Program Files (x86)/Selenium/geckodriver.exe
-login = +79911200691
-username = \u041F\u0430\u0432\u0435\u043B
-incorrect_password = aboba_is_a_bad_password
-
+loginpage=https://spb.superjob.ru/
+firefoxdriver=C:/Program Files (x86)/Selenium/geckodriver.exe
+username=\u0410\u043D\u0442\u043E\u043D
+incorrect_password=aboba_is_a_bad_password
+email=antoshka.antoshka.kartoshka@mail.ru
+password=N?;6_mi$EZ@r~Dh
+phone_number=+79999991991
+duration=10
