--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -2,7 +2,7 @@ loginpage=https://spb.superjob.ru/
 firefoxdriver=C:/Program Files (x86)/Selenium/geckodriver.exe
 username=\u0410\u043D\u0442\u043E\u043D
 incorrect_password=aboba_is_a_bad_password
-email=antoshka.antoshka.kartoshka@mail.ru
-password=N?;6_mi$EZ@r~Dh
+email=simple.mail.job@mail.ru
+password=Vp2-fsX-ynt-EKN
 phone_number=+79999991991
 duration=10
