not ended parallelize web driver

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,8 +1,8 @@
 loginpage=https://spb.superjob.ru/
 firefoxdriver=C:/Program Files (x86)/Selenium/geckodriver.exe
-username=\u0410\u043D\u0442\u043E\u043D
+username=\u0418\u0433\u043E\u0440\u044C
 incorrect_password=aboba_is_a_bad_password
-email=simple.mail.job@mail.ru
-password=Vp2-fsX-ynt-EKN
+email=lol.keker.anton123@mail.ru
+password=D%6p^!T2-xU3PX2
 phone_number=+79999991991
-duration=10
+duration=30
