added parallel driver execution for all tests

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,8 +1,8 @@
 loginpage=https://spb.superjob.ru/
 firefoxdriver=C:/Program Files (x86)/Selenium/geckodriver.exe
-username=\u0418\u0433\u043E\u0440\u044C
+username=\u0410\u043D\u0442\u043E\u043D \u0411\u0443\u0431\u043E\u043D
 incorrect_password=aboba_is_a_bad_password
-email=lol.keker.anton123@mail.ru
-password=D%6p^!T2-xU3PX2
+email=last.try.i.hope@mail.ru
+password=V-gUhH_]}4h%!S4
 phone_number=+79999991991
-duration=100
+duration=150
